added GET ALL endpoint
